tests/NormalTests/paczka1/fuzzy1/65292713.err
Error in line 4: ffk A157 53,0
Error in line 5: L0RH A412 57,6
Error in line 7: L0RH S791 8,4
Error in line 1: A412 A157 99,6
Error in line 11: L0RH A157 88,6
Error in line 20: A412 S791 237,30
Error in line 19: lLLMQWHK S791 9,0
Error in line 24: QZceZ A412 7,5
Error in line 21: lLLMQWHK A157 3,9
Error in line 12: A412 S791 80,9
Error in line 29: vzNnbb A412 49,2
Error in line 33: vzNnbb S95 33,9
Error in line 38: vzNnbb A412 -2,3
